--- a/frontend2/docker-compose.yml
+++ b/frontend2/docker-compose.yml
@@ -2,10 +2,6 @@ version: '3'
 
 services:
   app:
-    build: 
-      dockerfile: Dockerfile.dev
-      context: .
+    build: .
     ports:
-      - 5173:5173
-    volumes:
-      - .:/app
+      - 80:80
