--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,29 +12,25 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          lfs: 'true'
-      -
-        name: Build the docker image
-        run: cd frontend2
-        run: docker build -t raphaelmarques84/docker-app-react .
-      -
-        name: Zip package
+          lfs: "true"
+      - name: Build the docker image
+        run:
+          - cd frontend2
+          - docker build -t raphaelmarques84/docker-app-react .
+      - name: Zip package
         run: zip -r deploy.zip *
-      - 
-        name: Get timestamp
+      - name: Get timestamp
         uses: gerred/actions/current-time@master
         id: current-time
-      -
-        name: Run string replace
+      - name: Run string replace
         uses: frabert/replace-string-action@master
         id: format-time
         with:
           pattern: '[:\.]+'
           string: "${{ steps.current-time.outputs.time }}"
-          replace-with: '-'
-          flags: 'g'
-      -
-        name: Deploy to EB
+          replace-with: "-"
+          flags: "g"
+      - name: Deploy to EB
         uses: einaregilsson/beanstalk-deplouy@v14
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
